log
Thu Apr 30 08:05:32 PM UTC 2026: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:106:21: error: invalid initializer
  106 |     TreeNode temp = tree -> root;
      |                     ^~~~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘TreeNode’)
  107 |     while(temp -> left != NULL){
      |                ^~
treemap.c:108:21: error: invalid type argument of ‘->’ (have ‘TreeNode’)
  108 |         temp = temp -> left;
      |                     ^~
23f70eb
